added new css files

--- a/css/index.css
+++ b/css/index.css
@@ -11,3 +11,5 @@
 /*  LAYOUT  */
 @import "./layout/header.css";
 @import "./layout/hero.css";
+@import "./layout/benefits.css";
+@import "./layout/team-section.css";
