--- a/css/style.css
+++ b/css/style.css
@@ -3,150 +3,35 @@
 
 
 
-
-
-
-
-
-
-.benefits {
-    color: #2e2f42;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    /* 120% */
-    letter-spacing: 0.02em;
+.hero-section {
+    background: #2E2F42;
+    max-width: 1440px;
+    padding-bottom: 188px;
+    padding-top: 260px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+            rgba(46, 47, 66, 0.7)),
+        url(../images/background/background-hero.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-origin: padding-box;
 }
 
-.benefits-title {
-    color: #2E2F42;
-    margin-bottom: 8px;
-
-    /* Header 3 */
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    /* 120% */
-    letter-spacing: 0.02em;
+@media screen and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: url(../images/background/background-hero@2x.jpg);
+    }
 }
 
-.benefits-text {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
 
-.benefits-list {
-    display: flex;
-    gap: 24px;
-}
 
-.benefits-list-item {
-    width: calc((100% - 72px) / 4);
-}
 
-.benefits-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.benefits-icon-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 112px;
-    margin-bottom: 8px;
-    border-radius: 4px;
-    border: 1px solid #8E8F99;
-    background: #F4F4FD;
-}
 
-.team {
-    background: #F4F4FD;
-}
 
-.team-title {
-    color: #2e2f42;
-text-align: center;
 
-/* Header 2 */
-font-size: 36px;
-line-height: 1.11; /* 111.111% */
-letter-spacing: 0.02em;
-text-transform: capitalize;
-margin-bottom: 72px;
-}
-
-.team-list {
-    display: flex;
-    justify-content: space-between;
-    gap: 24px;
-}
-
-.team-list-item {
-    border-radius: 0px 0px 4px 4px;
-    background: #FFF;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.card-container {
-    padding: 32px 0;
-}
-
-.team-card {
-color: #2e2f42;
-text-align: center;
-margin-bottom: 8px;
-
-/* Header 3 */
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2; /* 120% */
-letter-spacing: 0.02em;
-}
-
-.team-card-desc {
-    color: #434455;
-text-align: center;
-margin-bottom: 8px;
-
-/* Body */
-font-size: 16px;
-line-height: 1.5; /* 150% */
-letter-spacing: 0.02em;
-}
-
-.social-list {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-}
-
-.social-list-icon {
-    fill: #f4f4fd;
-}
-
-.social-list-item {
-    width: 40px;
-    height: 40px;
-}
-
-.social-list-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list-link:focus,
-.social-list-link:hover {
-    background-color: #404BBF;
-}
 
 .portfolio-title {
     color: #2E2F42;
