divided css files

--- a/css/index.css
+++ b/css/index.css
@@ -13,3 +13,6 @@
 @import "./layout/hero.css";
 @import "./layout/benefits.css";
 @import "./layout/team-section.css";
+@import "./layout/portfolio.css";
+@import "./layout/footer.css";
+@import "./layout/backdrop.css";
