--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,8 +1,244 @@
+@media screen and (max-width: 767px) {
+    .menu-navigation-list {
+        display: none;
+    }
+
+    .address {
+        display: none;
+    }
+
+    .menu-navigation {
+        margin-top: 17.5px;
+        margin-bottom: 17.5px;
+    }
+
+        .open-mobile-menu-btn {
+            border: none;
+            background-color: transparent;
+            line-height: 0;
+            padding: 0;
+            stroke: #2F2F37;
+        }
+    
+        .open-mobile-menu-icon {
+            transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .open-mobile-menu-btn:focus>.open-mobile-menu-icon,
+        .open-mobile-menu-btn:hover>.open-mobile-menu-icon {
+            stroke: #4d5ae5;
+        }
+    
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 99999999;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            transform: translateX(100%);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .mobile-menu.is-open {
+            transform: translateX(0%);
+        }
+    
+        .mobile-menu-close-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            top: 24px;
+            right: 24px;
+            padding: 0;
+            width: 24px;
+            height: 24px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+    
+            background-color: transparent;
+            border-radius: 50%;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .mobile-menu-close-btn:hover,
+        .mobile-menu-close-btn:focus {
+            background-color: #404BBF;
+            fill: #FFFFFF;
+            border: none;
+        }
+    
+        .mobile-close-button-icon {
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+    .mobile-menu-navigation-container {
+        padding: 72px 16px 40px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .mobile-menu-navigation-list {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .mobile-menu-navigation-item {
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11; /* 111.111% */
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+    .mobile-menu-navigation-item:focus {
+        color: #404BBF;
+    }
+
+    .mobile-address-list {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-top: 168px;
+    }
+    
+    
+    .mobile-menu-contacts {
+        color: #434455;
+        
+            /* Header 3 */
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 1.2;
+            /* 120% */
+            letter-spacing: 0.02em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu-contacts:hover,
+    .mobile-menu-contacts:focus {
+        color: #4D5AE5;
+    }
+
+        .mobile-menu-social-list {
+            width: 280px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 40px;
+            margin-top: 48px;
+        }
+
+        .mobile-social-list-item {
+            width: 40px;
+            height: 40px;
+        }
+    
+        .mobile-social-list-link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            background-color: #4D5AE5;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .mobile-social-list-link:focus,
+        .mobile-social-list-link:hover {
+            background-color: #31D0AA;
+        }
+    
+        .mobile-social-list-icon {
+            fill: #f4f4fd;
+        }
+    
+}
+
+
+
 .header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+.menu {
+    z-index: 999;
+    border-bottom: 1px solid #e7e9fc;
+    position: fixed;
+    width: 100%;
+    background-color: #FFF;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
+.logo-part {
+    color: #2e2f42;
+    font-family: var(--secondary-font-family);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.logo {
+    color: #4d5ae5;
+    font-family: var(--secondary-font-family);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.current {
+    color: #404BBF;
+}
+
+.mobile-address {
+    font-style: normal;
+}
+
+
+
+@media screen and (min-width: 768px) {
+    .open-mobile-menu-btn {
+        display: none;
+    }
+
+    .menu-navigation {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .menu-navigation-list {
+        display: flex;
+        gap: 40px;
+    }
+
+    .address-container {
+        display: flex;
+        gap: 40px;
+        align-items: center;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+}
+
+
+
+
+/* 
 
 .menu {
     z-index: 999;
@@ -33,32 +269,10 @@
 
 
 
-
-.logo-part {
-    color: #2e2f42;
-    font-family: var(--secondary-font-family);
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.16;
-    /* 116.667% */
-    letter-spacing: 0.54px;
-    text-transform: uppercase;
-}
-
 .top-logo {
     margin-right: 76px;
 }
 
-.logo {
-    color: #4d5ae5;
-    font-family: var(--secondary-font-family);
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.17;
-    /* 116.667% */
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
 
 
 
@@ -111,4 +325,5 @@
 .menu-contacts:focus,
 .menu-contacts:hover {
     color: #404BBF;
-}
+} */
+
