--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -12,66 +12,67 @@
         margin-bottom: 17.5px;
     }
 
-        .open-mobile-menu-btn {
-            border: none;
-            background-color: transparent;
-            line-height: 0;
-            padding: 0;
-            stroke: #2F2F37;
-        }
-    
-        .open-mobile-menu-icon {
-            transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .open-mobile-menu-btn:focus>.open-mobile-menu-icon,
-        .open-mobile-menu-btn:hover>.open-mobile-menu-icon {
-            stroke: #4d5ae5;
-        }
-    
-        .mobile-menu {
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 99999999;
-            width: 100%;
-            height: 100%;
-            background-color: #fff;
-            transform: translateX(100%);
-            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .mobile-menu.is-open {
-            transform: translateX(0%);
-        }
-    
-        .mobile-menu-close-btn {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: absolute;
-            top: 24px;
-            right: 24px;
-            padding: 0;
-            width: 24px;
-            height: 24px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-    
-            background-color: transparent;
-            border-radius: 50%;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .mobile-menu-close-btn:hover,
-        .mobile-menu-close-btn:focus {
-            background-color: #404BBF;
-            fill: #FFFFFF;
-            border: none;
-        }
-    
-        .mobile-close-button-icon {
-            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
+    .open-mobile-menu-btn {
+        border: none;
+        background-color: transparent;
+        line-height: 0;
+        padding: 0;
+        stroke: #2f2f37;
+    }
+
+    .open-mobile-menu-icon {
+        transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .open-mobile-menu-btn:focus>.open-mobile-menu-icon,
+    .open-mobile-menu-btn:hover>.open-mobile-menu-icon {
+        stroke: #4d5ae5;
+    }
+
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 99999999;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        transform: translateX(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu.is-open {
+        transform: translateX(0%);
+    }
+
+    .mobile-menu-close-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 24px;
+        right: 24px;
+        padding: 0;
+        width: 24px;
+        height: 24px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+
+        background-color: transparent;
+        border-radius: 50%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu-close-btn:hover,
+    .mobile-menu-close-btn:focus {
+        background-color: #404bbf;
+        fill: #ffffff;
+        border: none;
+    }
+
+    .mobile-close-button-icon {
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
     .mobile-menu-navigation-container {
         padding: 72px 16px 40px;
@@ -90,14 +91,15 @@
     .mobile-menu-navigation-item {
         font-size: 36px;
         font-weight: 700;
-        line-height: 1.11; /* 111.111% */
+        line-height: 1.11;
+        /* 111.111% */
         letter-spacing: 0.02em;
         text-transform: capitalize;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
+    }
 
     .mobile-menu-navigation-item:focus {
-        color: #404BBF;
+        color: #404bbf;
     }
 
     .mobile-address-list {
@@ -106,62 +108,62 @@
         gap: 24px;
         margin-top: 168px;
     }
-    
-    
+
     .mobile-menu-contacts {
         color: #434455;
-        
-            /* Header 3 */
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 1.2;
-            /* 120% */
-            letter-spacing: 0.02em;
+
+        /* Header 3 */
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        /* 120% */
+        letter-spacing: 0.02em;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .mobile-menu-contacts:hover,
     .mobile-menu-contacts:focus {
-        color: #4D5AE5;
+        color: #4d5ae5;
     }
 
-        .mobile-menu-social-list {
-            width: 280px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            gap: 40px;
-            margin-top: 48px;
-        }
+    .mobile-menu-social-list {
+        width: 280px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 40px;
+        margin-top: 48px;
+    }
 
-        .mobile-social-list-item {
-            width: 40px;
-            height: 40px;
-        }
-    
-        .mobile-social-list-link {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background-color: #4D5AE5;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-    
-        .mobile-social-list-link:focus,
-        .mobile-social-list-link:hover {
-            background-color: #31D0AA;
-        }
-    
-        .mobile-social-list-icon {
-            fill: #f4f4fd;
-        }
-    
+    .mobile-social-list-item {
+        width: 40px;
+        height: 40px;
+    }
+
+    .mobile-social-list-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: #4d5ae5;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-social-list-link:focus,
+    .mobile-social-list-link:hover {
+        background-color: #31d0aa;
+    }
+
+    .mobile-social-list-icon {
+        fill: #f4f4fd;
+    }
+
+    .mobile-address {
+        font-style: normal;
+    }
 }
-
-
 
 .header-container {
     display: flex;
@@ -174,8 +176,10 @@
     border-bottom: 1px solid #e7e9fc;
     position: fixed;
     width: 100%;
-    background-color: #FFF;
-    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+    background-color: #fff;
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+        0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+        0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .logo-part {
@@ -199,24 +203,31 @@
 }
 
 .current {
-    color: #404BBF;
+    color: #404bbf;
 }
 
-.mobile-address {
+.address {
     font-style: normal;
 }
 
-
+/* ============= TABLET ============= */
 
 @media screen and (min-width: 768px) {
     .open-mobile-menu-btn {
         display: none;
     }
 
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        gap: 120px;
+    }
+
     .menu-navigation {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 120px;
     }
 
     .menu-navigation-list {
@@ -224,18 +235,86 @@
         gap: 40px;
     }
 
+    .current::after {
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        display: block;
+        content: '';
+        width: 48px;
+        height: 4px;
+        background-color: #404BBF;
+        border-radius: 2px;
+    }
+
+    .menu-navigation-item:focus,
+    .menu-navigation-item:hover {
+        color: #404BBF;
+    }
+
+    .menu-navigation-item {
+        display: block;
+        position: relative;
+        color: #2E2F42;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        padding: 24px 0;
+    }
+
     .address-container {
         display: flex;
-        gap: 40px;
+        flex-direction: column;
         align-items: center;
+        gap: 12px;
+    }
+
+    .menu-contacts {
+        color: #434455;
+
+        font-size: 12px;
+        line-height: 1.17;
+        /* 116.667% */
+        letter-spacing: 0.04em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .menu-contacts:focus,
+    .menu-contacts:hover {
+        color: #404BBF;
     }
 
     .mobile-menu {
         display: none;
     }
+
+    .current {
+        color:#404BBF
+    }
 }
 
+/* ============= DESKTOP ============= */
 
+@media screen and (min-width: 1158px) {
+    .address-container {
+        flex-direction: row;
+        gap: 40px;
+    }
+
+    .menu-navigation {
+        gap: 76px;
+    }
+
+    .menu-contacts {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+}
 
 
 /* 
@@ -326,4 +405,3 @@
 .menu-contacts:hover {
     color: #404BBF;
 } */
-
