--- a/css/bg-image.css
+++ b/css/bg-image.css
@@ -21,6 +21,8 @@ screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
     .hero-section {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)), url(../images/background/background-hero-mobile@2x.jpg);
+                padding-top: 128px;
+                padding-bottom: 72px;
     }
 }
 
@@ -28,6 +30,8 @@ screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
     .hero-section {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)), url(../images/background/background-hero-tablet.jpg);
+                padding-bottom: 112px;
+                padding-top: 184px;
     }
 }
 
@@ -44,6 +48,8 @@ screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
     .hero-section {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)), url(../images/background/background-hero.jpg);
+                padding-bottom: 188px;
+                padding-top: 260px;
     }
 }
 
