--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -1,6 +1,62 @@
+@media screen and (min-width: 320px) {
 
+    .hero-container {
+        width: 100%;
+        max-height: 432px;
+    }
 
-.hero-title {
+    .hero-title {
+        color: #FFF;
+        max-width: 169px;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-align: center;
+        margin: 0 auto 72px;
+    }
+
+    .hero-button {
+        display: block;
+        margin: 0 auto;
+        border: none;
+        padding: 16px 32px;
+        border-radius: 4px;
+        min-width: 169px;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+        background: #4D5AE5;
+        color: #FFF;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .hero-button:focus,
+    .hero-button:hover {
+        background: #404BBF;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .hero-title {
+        max-width: 496px;
+        margin: 0 auto 36px;
+        font-size: 56px;
+        line-height: 1.07;
+        letter-spacing: 0.02em;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .hero-title {
+        margin: 0 auto 48px;
+    }
+}
+
+/* .hero-title {
     max-width: 496px;
     margin: 0 auto 48px;
     color: #FFF;
@@ -8,7 +64,6 @@
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
-    /* 107.143% */
     letter-spacing: 0.02em;
 }
 
@@ -22,12 +77,10 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     background: #4D5AE5;
     color: #FFF;
-    /* Button Text */
     font-family: inherit;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
-    /* 150% */
     letter-spacing: 0.04em;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -35,4 +88,4 @@
 .hero-button:focus,
 .hero-button:hover {
     background: #404BBF;
-}
+} */
