--- a/css/base/section.css
+++ b/css/base/section.css
@@ -1,3 +1,11 @@
-.section-container {
-    padding: 120px 0;
+@media screen and (min-width: 320px) {
+    .section-container {
+        padding: 96px 0;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .section-container {
+        padding: 120px 0;
+    }
 }
