--- a/css/layout/benefits.css
+++ b/css/layout/benefits.css
@@ -1,9 +1,90 @@
-.benefits {
+@media screen and (min-width: 320px) {
+    .benefits-icon {
+        display: none;
+    }
+
+    .benefits-list {
+        display: flex;
+        flex-direction: column;
+        gap: 72px;
+    }
+
+    .benefits-title {
+        color: #2E2F42;
+        text-align: center;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        margin-bottom: 8px;
+    }
+
+    .benefits-text {
+        align-self: stretch;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .benefits-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 72px 24px;
+    }
+
+    .benefits-title {
+        text-align: left;
+    }
+
+    .benefits-list-item {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .benefits-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .benefits-icon-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 112px;
+        margin-bottom: 8px;
+        border-radius: 4px;
+        border: 1px solid #8E8F99;
+        background: #F4F4FD;
+    }
+
+    .benefits-list {
+        gap: 24px;
+    }
+
+    .benefits-list-item {
+        width: calc((100% - 72px) / 4);
+    }
+
+    .benefits-title {
+
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+    }
+}
+
+/* .benefits {
     color: #2e2f42;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
-    /* 120% */
     letter-spacing: 0.02em;
 }
 
@@ -11,11 +92,9 @@
     color: #2E2F42;
     margin-bottom: 8px;
 
-    /* Header 3 */
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
-    /* 120% */
     letter-spacing: 0.02em;
 }
 
@@ -48,4 +127,4 @@
     border-radius: 4px;
     border: 1px solid #8E8F99;
     background: #F4F4FD;
-}
+} */
