--- a/css/layout/team-section.css
+++ b/css/layout/team-section.css
@@ -1,89 +1,104 @@
-.team {
-    background: #F4F4FD;
+@media screen and (min-width: 320px) {
+    .team {
+        background: #F4F4FD;
+    }
+
+    .team-title {
+        color: #2e2f42;
+        text-align: center;
+
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        margin-bottom: 72px;
+    }
+
+    .team-list {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 72px;
+    }
+
+    .team-list-item {
+        border-radius: 0px 0px 4px 4px;
+        background: #FFF;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    }
+
+    .card-container {
+        padding: 32px 0;
+    }
+
+    .team-card {
+        color: #2e2f42;
+        text-align: center;
+        margin-bottom: 8px;
+
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+    }
+
+    .team-card-desc {
+        color: #434455;
+        text-align: center;
+        margin-bottom: 8px;
+
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
+    .social-list {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+    }
+
+    .social-list-icon {
+        fill: #f4f4fd;
+    }
+
+    .social-list-item {
+        width: 40px;
+        height: 40px;
+    }
+
+    .social-list-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: #4D5AE5;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .social-list-link:focus,
+    .social-list-link:hover {
+        background-color: #404BBF;
+    }
 }
 
-.team-title {
-    color: #2e2f42;
-    text-align: center;
-
-    /* Header 2 */
-    font-size: 36px;
-    line-height: 1.11;
-    /* 111.111% */
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    margin-bottom: 72px;
+@media screen and (min-width: 768px) {
+    .team-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 64px 24px;
+    }
 }
 
-.team-list {
-    display: flex;
-    justify-content: space-between;
-    gap: 24px;
-}
-
-.team-list-item {
-    border-radius: 0px 0px 4px 4px;
-    background: #FFF;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-
-.card-container {
-    padding: 32px 0;
-}
-
-.team-card {
-    color: #2e2f42;
-    text-align: center;
-    margin-bottom: 8px;
-
-    /* Header 3 */
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    /* 120% */
-    letter-spacing: 0.02em;
-}
-
-.team-card-desc {
-    color: #434455;
-    text-align: center;
-    margin-bottom: 8px;
-
-    /* Body */
-    font-size: 16px;
-    line-height: 1.5;
-    /* 150% */
-    letter-spacing: 0.02em;
-}
-
-.social-list {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-}
-
-.social-list-icon {
-    fill: #f4f4fd;
-}
-
-.social-list-item {
-    width: 40px;
-    height: 40px;
-}
-
-.social-list-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: #4D5AE5;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list-link:focus,
-.social-list-link:hover {
-    background-color: #404BBF;
+@media screen and (min-width: 1158px) {
+    .team-list {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        gap: 24px;
+    }
 }
