--- a/css/base/container.css
+++ b/css/base/container.css
@@ -19,6 +19,8 @@
 
 @media screen and (min-width: 1158px) {
     .container {
-            width: 1158px;
-        }
+        width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
