--- a/css/layout/portfolio.css
+++ b/css/layout/portfolio.css
@@ -1,15 +1,107 @@
-.portfolio-title {
-    color: #2E2F42;
-    text-align: center;
-    margin-bottom: 72px;
+@media screen and (min-width: 320px) {
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        padding: 40px 32px;
+        overflow: auto;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        background-color: #4D5AE5;
+        color: #F4F4FD;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-    /* Header 2 */
-    font-size: 36px;
-    line-height: 1.11;
-    /* 111.111% */
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
+    .portfolio-title {
+        color: #2E2F42;
+        text-align: center;
+        margin-bottom: 72px;
+
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+    }
+
+    .portfolio-list {
+        display: flex;
+        flex-direction: column;
+        gap: 48px;
+    }
+
+    .portfolio-card-container {
+        border: 1px solid #E7E9FC;
+        padding: 32px 16px;
+        border-top: none;
+    }
+
+    .portfolio-list-item {
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .portfolio-list-item:hover {
+        box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    }
+
+    .portfolio-list-item:hover .overlay,
+    .portfolio-list-item:focus .overlay {
+        transform: translateY(0);
+    }
+
+    .img-wrapper {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .portfolio-subtitle {
+        color: #2E2F42;
+        margin-bottom: 8px;
+
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+    }
+
+    .portfolio-desc {
+        color: #434455;
+
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
 }
+
+
+@media screen and (min-width: 768px) {
+    .portfolio-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+    }
+
+    .portfolio-list-item {
+        max-width: 356px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .portfolio-list {
+        gap: 48px 24px;
+    }
+
+    .portfolio-list-item {
+        max-width: 360px;
+    }
+}
+
+
+/* 
 
 .portfolio-list {
     display: flex;
@@ -62,21 +154,16 @@
     color: #2E2F42;
     margin-bottom: 8px;
 
-    /* Header 3 */
     font-weight: 500;
-    ;
     font-size: 20px;
     line-height: 1.2;
-    /* 120% */
     letter-spacing: 0.02em;
 }
 
 .portfolio-desc {
     color: #434455;
 
-    /* Body */
     font-size: 16px;
     line-height: 1.5;
-    /* 150% */
     letter-spacing: 0.02em;
-}
+} */
