--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -1,4 +1,220 @@
-.footer {
+@media screen and (min-width: 320px) {
+    .footer {
+        background: #2E2F42;
+        padding-top: 96px;
+        padding-bottom: 96px;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        gap: 72px;
+    }
+
+    .social-title {
+        color: #FFFFFF;
+        margin-bottom: 16px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+
+    }
+
+    .footer-left {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bottom-logo {
+        display: inline-block;
+        margin-bottom: 16px;
+        align-self: center;
+    }
+
+    .footer-logo {
+        color: #f4f4fd;
+    }
+
+    .footer-text {
+        color: #F4F4FD;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        width: 264px;
+    }
+
+    .footer-social {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-social-list {
+        display: flex;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .footer-social-list-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background-color: #4D5AE5;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .footer-social-list-link:focus,
+    .footer-social-list-link:hover {
+        background-color: #31D0AA;
+    }
+
+    .footer-subscribe-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-social-list-icon {
+        fill: #f4f4fd;
+    }
+
+    .footer-subscribe-form {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .subscribe-input {
+        display: inline-block;
+        color: #FFF;
+        background-color: transparent;
+        width: 288px;
+        height: 40px;
+        padding-left: 16px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        border-radius: 4px;
+        border: 1px solid #FFF;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    }
+
+    .subscribe-input::placeholder {
+        color: #FFF;
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 0.04em;
+    }
+
+    .subscribe-text {
+        color: #FFF;
+        margin-bottom: 16px;
+
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
+    .subscribe-btn {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        width: 165px;
+        height: 40px;
+        padding: 8px 24px;
+        color: #FFF;
+        border-radius: 4px;
+        border: none;
+        background: #4D5AE5;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        font-family: var(--primary-font-family);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+    }
+
+    .subscribe-btn:focus,
+    .subscribe-btn:hover {
+        background: #404BBF;
+    }
+
+    .footer-subscribe-icon {
+        margin-left: 16px;
+    }
+}
+
+
+@media screen and (min-width: 768px) {
+    .footer-left {
+        display: block;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        gap: 72px 24px;
+        padding-left: 108px;
+    }
+
+    .footer-social {
+        display: block;
+    }
+
+    .footer-subscribe-box {
+        display: block;
+
+    }
+
+    .footer-subscribe-form {
+        flex-direction: row;
+        gap: 24px;
+    }
+
+    .subscribe-input {
+        width: 264px;
+    }
+}
+
+
+@media screen and (min-width: 1158px) {
+
+    .footer {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .footer-container {
+        flex-wrap: nowrap;
+        align-items: baseline;
+        gap: 0;
+        padding-left: 15px;
+    }
+
+    .footer-left {
+        margin-right: 120px;
+    }
+
+    .footer-subscribe-box {
+        margin-left: 80px;
+    }
+}
+
+/* .footer {
     background: #2E2F42;
     padding-top: 100px;
     padding-bottom: 100px;
@@ -35,10 +251,8 @@
 
 .footer-text {
     color: #F4F4FD;
-    /* Body */
     font-size: 16px;
     line-height: 1.5;
-    /* 150% */
     letter-spacing: 0.02em;
     width: 264px;
 }
@@ -90,7 +304,6 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     font-size: 12px;
     line-height: 1.5;
-    /* 200% */
     letter-spacing: 0.04em;
     border-radius: 4px;
     border: 1px solid #FFF;
@@ -101,7 +314,6 @@
     color: #FFF;
     font-size: 12px;
     line-height: 2;
-    /* 200% */
     letter-spacing: 0.04em;
 }
 
@@ -109,11 +321,9 @@
     color: #FFF;
     margin-bottom: 16px;
 
-    /* Body Medium */
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
-    /* 150% */
     letter-spacing: 0.02em;
 }
 
@@ -130,12 +340,10 @@
     background: #4D5AE5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    /* Button Text */
     font-family: var(--primary-font-family);
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
-    /* 150% */
     letter-spacing: 0.04em;
 }
 
@@ -146,4 +354,4 @@
 
 .footer-subscribe-icon {
     margin-left: 16px;
-}
+} */
