--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -156,6 +156,12 @@
     }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+    .footer .footer-container {
+        width: 584px;
+    }
+}
+
 
 @media screen and (min-width: 768px) {
     .footer-left {
@@ -168,7 +174,6 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         gap: 72px 24px;
-        padding-left: 108px;
     }
 
     .footer-social {
