--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -17,16 +17,16 @@
         background-color: transparent;
         line-height: 0;
         padding: 0;
-        stroke: #2f2f37;
+        fill: #2f2f37;
     }
 
     .open-mobile-menu-icon {
-        transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .open-mobile-menu-btn:focus>.open-mobile-menu-icon,
     .open-mobile-menu-btn:hover>.open-mobile-menu-icon {
-        stroke: #4d5ae5;
+        fill: #4d5ae5;
     }
 
     .mobile-menu {
@@ -89,6 +89,7 @@
     }
 
     .mobile-menu-navigation-item {
+        color: #2E2F42;
         font-size: 36px;
         font-weight: 700;
         line-height: 1.11;
@@ -102,11 +103,16 @@
         color: #404bbf;
     }
 
+    .mobile-menu-bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
     .mobile-address-list {
         display: flex;
         flex-direction: column;
         gap: 24px;
-        margin-top: 168px;
     }
 
     .mobile-menu-contacts {
@@ -293,7 +299,7 @@
     }
 
     .current {
-        color:#404BBF
+        color: #404BBF
     }
 }
 
