--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -127,6 +127,10 @@
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
+    .tel {
+        color: #4d5ae5;
+    }
+
     .mobile-menu-contacts:hover,
     .mobile-menu-contacts:focus {
         color: #4d5ae5;
